--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,15 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: '^1'
+          go-version: "^1.21"
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.49.0
+          version: latest
           args: --verbose
 
   # Label of the container job
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        go: [1.15, 1.16, 1.17, 1.18, 1.19]
+        go: [1.15, 1.16, 1.17, 1.18, 1.19, "1.20", 1.21]
         include:
           - os: ubuntu-latest
             go-build: ~/.cache/go-build
@@ -34,7 +34,7 @@ jobs:
 
     steps:
       - name: Set up Go ${{ matrix.go }}
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go }}
 
