ci: refactor GitHub Actions workflows
- Update GitHub Actions checkout to version 4 in codeql.yaml, go.yml, and goreleaser.yml workflows
- Update GitHub Actions CodeQL init and analyze to version 3 in codeql.yaml workflow
- Add checkout step with fetch-depth 0 in go.yml workflow
- Remove specific go-version in favor of go.mod versioning in go.yml and goreleaser.yml workflows
- Enable check-latest for Go version in go.yml and goreleaser.yml workflows
- Update GitHub Actions golangci-lint to version 4 in go.yml workflow
- Add Go version 1.22 to the test matrix in go.yml workflow
- Update GitHub Actions cache to version 4 in go.yml workflow
- Update GitHub Actions codecov to version 4 in go.yml workflow
- Update GitHub Actions goreleaser to version 5 in goreleaser.yml workflow
- Change goreleaser action argument from `--rm-dist` to `--clean` in goreleaser.yml workflow

Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,14 +5,18 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Setup go
         uses: actions/setup-go@v5
         with:
-          go-version: "^1.21"
-      - name: Checkout repository
-        uses: actions/checkout@v3
+          go-version-file: go.mod
+          check-latest: true
       - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v4
         with:
           version: latest
           args: --verbose
@@ -22,7 +26,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        go: [1.15, 1.16, 1.17, 1.18, 1.19, "1.20", 1.21]
+        go: [1.15, 1.16, 1.17, 1.18, 1.19, "1.20", 1.21, 1.22]
         include:
           - os: ubuntu-latest
             go-build: ~/.cache/go-build
@@ -39,11 +43,11 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
 
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: |
             ~/go/pkg/mod              # Module download cache
@@ -59,6 +63,6 @@ jobs:
           go test -v -covermode=atomic -coverprofile=coverage.out
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           flags: ${{ matrix.os }},go-${{ matrix.go }}
