ci: update and refactor golangci-lint setup and configuration
- Update GitHub Action to use golangci-lint-action version 8 and set the linter version to v2.1
- Refactor golangci-lint configuration to use version 2 syntax, with explicit defaults and added exclusions and formatter sections
- Remove some linters (gofmt, goimports, gosimple, stylecheck, typecheck) from enable list and add them under formatters
- Add more granular exclusion patterns for generated code and specific directories
- Fix comment in code to use WithJSON for correct option naming

Signed-off-by: appleboy <appleboy.tw@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,10 +16,9 @@ jobs:
           go-version-file: go.mod
           check-latest: true
       - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
-          args: --verbose
+          version: v2.1
 
   # Label of the container job
   test:
